--- a/templates/school/student_detail.html
+++ b/templates/school/student_detail.html
@@ -2,67 +2,81 @@
 {% load static %}
 
 {% block css %}
- <!-- Custom styles for this template -->
-    <link href="{% static 'vendor/css/product-detail.css' %}" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="{% static 'vendor/css/product-detail.css' %}" rel="stylesheet">
 <style>
-        .container {
+.container {
+    display: flex;
+    flex-direction: column;
+}
 
-              display: flex;
-                flex-direction: colums;
-          }
+.row {
+    margin-top: 100px;
+}
 
-        .row {
-        width: 100%;
-            margin-top: 50px;
+.card {
+    width: 100%;
+}
 
-        }
+.card-img-top {
+    height: 300px;
+    object-fit: cover;
+}
 
-    </style>
+.card-body {
+    align-items: center;
+}
+
+.card-title {
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.card-text {
+    font-size: 18px;
+}
+
+.btn-group {
+    margin-top: 20px;
+}
+
+.btn-group .btn {
+    margin-right: 10px;
+}
+</style>
 {% endblock %}
 
 {% block content %}
 <!-- Page Content -->
 <div class="container">
-
-    <div class="row">
-
-        <!-- /.col-lg-3 -->
-
-        <div class="col-lg-9">
-
-            <div class="row justify-content-center">
-
-                <div class="col-lg-4 col-md-6 mb-4 d-flex justify-content-center" style="width: 100%">
-                    <div class="card h-100 w-100">
-<img src="{{ student.photo.url }}" class="img-fluid" alt="{{ student.full_name }}" style="object-fit: cover; height: 300px; width: 800px;">
-                        <div class="card-body text-center align-items-center" style="width: 100%">
-                            <h4 class="card-title">ФИО :{{ student.full_name }}</h4>
-                            <h5>Email : {{ student.email }}</h5>
-                            <h5>Пол : {{ student.gender }}</h5>
-                            <h5>Дата рождения : {{ student.date_of_birth }}</h5>
-                            <p class="card-text" style="font-size: 18px">Адрес проживания : {{ student.address }}</p>
-                        </div>
-                        </div>
-                    <form method="POST" action="{% url 'student_delete' student.id %}">
-                {% csrf_token %}
-                        {% if user.is_authenticated %}
-                    <button type="submit" class="btn btn-primary">{{ _('Удалить') }}</button>
-                    <button type="submit" class="btn btn-success">{{ _('Редактировать') }}</button>
-                        {% endif %}
-            </form>
-        </div>
-                    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-6 col-md-8 mb-4">
+            <div class="card">
+                <img src="{{ student.photo.url }}" class="card-img-top img-fluid" alt="{{ student.full_name }}">
+                <div class="card-body">
+                    <h4 class="card-title">ФИО: {{ student.full_name }}</h4>
+                    <h5>Email: {{ student.email }}</h5>
+                    <h5>Пол: {{ student.gender }}</h5>
+                    <h5>Дата рождения: {{ student.date_of_birth }}</h5>
+                    <p class="card-text">Адрес проживания: {{ student.address }}</p>
                 </div>
-
+                {% if user.is_authenticated %}
+                <div class="btn-group" role="group">
+                    <form method="POST" action="{% url 'student_delete' student.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">{{ _('Удалить') }}</button>
+                    </form>
+                    <form method="POST" action="{% url 'student_update' student.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn btn-primary">{{ _('Редактировать') }}</button>
+                    </form>
+                </div>
+                {% endif %}
             </div>
-
         </div>
-
     </div>
-
 </div>
 {% endblock %}
-
 
 {% block footer %}
 <!-- Footer -->
