--- a/templates/school/login.html
+++ b/templates/school/login.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <main>
+
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5">
@@ -29,22 +30,24 @@
                         </div>
                         <div class="card-body">
                             <form action="{% url 'login' %}" method="post">
-                                {% csrf_token %}
-                                <div class="form-group">
-                                    <label class="small mb-1" for="{{ form.phone_number.id_for_label }}">
-                                        Номер телефона
-                                    </label>
-                                    {{ form.phone_number }}
-                                </div>
-                                <div class="form-group">
-                                    <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
-                                    {{ form.password }}
-                                </div>
-                                <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                    <a class="small" href="#">Забыли пароль?</a>
-                                    <input class="btn btn-primary" type="submit" value="Авторизоваться">
-                                </div>
-                            </form>
+                                            {% csrf_token %}
+
+    <div class="form-group">
+        <label class="small mb-1" for="{{ form.username.id_for_label }}">
+            Номер телефона
+        </label>
+        {{ form.username }}
+    </div>
+    <div class="form-group">
+        <label class="small mb-1" for="{{ form.password.id_for_label }}">Пароль</label>
+        {{ form.password }}
+    </div>
+    <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
+        <a class="small" href="#">Забыли пароль?</a>
+        <input class="btn btn-primary" type="submit" value="Авторизоваться">
+    </div>
+</form>
+
                         </div>
                         <div class="card-footer text-center">
                             <div class="small"><a href="{% url 'registration' %}">
