--- a/templates/school/registration.html
+++ b/templates/school/registration.html
@@ -64,6 +64,12 @@
                                         </label>
                                         {{ form.phone_number }}
                                     </div>
+                                    <div class="col-md-6">
+                                        <label class="small mb-1" for="{{ form.subject.id_for_label }}">
+                                            Предмет
+                                        </label>
+                                        {{ form.subject }}
+                                    </div>
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-6">
