--- a/templates/school/student_form.html
+++ b/templates/school/student_form.html
@@ -2,24 +2,22 @@
 {% load static %}
 
 {% block css %}
- <!-- Custom styles for this template -->
+    <!-- Custom styles for this template -->
     <link href="{% static 'vendor/css/product-detail.css' %}" rel="stylesheet">
-<html>
-<head>
-    <title>Форма ученика</title>
-  <style>
-        form {
-            margin-top: 100px;
+    <style>
+        .form-container {
+            margin-top: 80px;
         }
     </style>
-</head>
-<body>
-    <h1>Форма ученика</h1>
-    <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Сохранить</button>
-</form>
-</body>
-</html>
+{% endblock %}
+
+{% block content %}
+    <div class="container form-container">
+        <h1>Форма ученика</h1>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Сохранить</button>
+        </form>
+    </div>
 {% endblock %}
