--- a/templates/school/student_update_form.html
+++ b/templates/school/student_update_form.html
@@ -2,39 +2,22 @@
 {% load static %}
 
 {% block css %}
+    <!-- Custom styles for this template -->
     <link href="{% static 'vendor/css/product-detail.css' %}" rel="stylesheet">
-<style>
-    form {
-        margin-top: 100px;
-    }
-
-    .current-data {
-        margin-top: 50px;
-        font-size: 18px;
-    }
-</style>
+    <style>
+        .form-container {
+            margin-top: 80px;
+        }
+    </style>
 {% endblock %}
 
 {% block content %}
-
-<h1>Форма ученика kkkkk</h1>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Сохранить</button>
-</form>
-{% if student %}
-<div class="current-data">
-<h2>Текущие данные ученика:</h2>
-<p>ФИО: {{ student.full_name }}</p>
-<p>Email: {{ student.email }}</p>
-<p>Дата рождения: {{ student.date_of_birth }}</p>
-<p>Адрес: {{ student.address }}</p>
-<p>Пол: {{ student.gender }}</p>
-{% if student.photo %}
-<img src="{{ student.photo.url }}" alt="{{ student.full_name }}" style="max-width: 300px;">
-{% endif %}
-</div>
-{% endif %}
+    <div class="container form-container">
+        <h1>Форма ученика </h1>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Сохранить</button>
+        </form>
+    </div>
 {% endblock %}
-
